--- a/3rdParty/webrtc_native/CMakeLists.txt
+++ b/3rdParty/webrtc_native/CMakeLists.txt
@@ -9,23 +9,58 @@ if(WIN32)
 
         file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/webrtc)
 
-        execute_process(
-                COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/../depot_tools/fetch.bat --no-history webrtc
-                WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/webrtc"
-                RESULT_VARIABLE fetch_webrtc_result
-        )
-        if(NOT ${fetch_webrtc_result} EQUAL 0)
-            message(FATAL_ERROR "\"fetch --no-history webrtc\" failed (${fetch_webrtc_result})")
+        if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/webrtc/src")
+            execute_process(
+                    COMMAND ${CMAKE_COMMAND} -E env DEPOT_TOOLS_WIN_TOOLCHAIN=0 ${CMAKE_CURRENT_SOURCE_DIR}/../depot_tools/fetch.bat webrtc
+                    WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/webrtc"
+                    RESULT_VARIABLE fetch_webrtc_result
+            )
+            if(NOT ${fetch_webrtc_result} EQUAL 0)
+                message(FATAL_ERROR "\"fetch webrtc\" failed (${fetch_webrtc_result})")
+            endif()
+
+            execute_process(
+                    COMMAND ${CMAKE_COMMAND} -E env DEPOT_TOOLS_WIN_TOOLCHAIN=0 ${CMAKE_CURRENT_SOURCE_DIR}/../depot_tools/gclient.bat sync --with_branch_heads --with_tags
+                    WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/webrtc"
+                    RESULT_VARIABLE gclient_sync_webrtc_result
+            )
+            if(NOT ${gclient_sync_webrtc_result} EQUAL 0)
+                message(FATAL_ERROR "\"gclient sync --with_branch_heads --with_tags\" failed (${gclient_sync_webrtc_result})")
+            endif()
+
+            execute_process(
+                    COMMAND git checkout ${WEBRTC_CHECKOUT}
+                    WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/webrtc/src"
+                    RESULT_VARIABLE git_checkout_webrtc_result
+            )
+            if(NOT ${git_checkout_webrtc_result} EQUAL 0)
+                message(FATAL_ERROR "\"git checkout\" failed (${git_checkout_webrtc_result})")
+            endif()
+
+            execute_process(
+                    COMMAND ${CMAKE_COMMAND} -E env DEPOT_TOOLS_WIN_TOOLCHAIN=0 ${CMAKE_CURRENT_SOURCE_DIR}/../depot_tools/gclient.bat sync --with_branch_heads --with_tags
+                    WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/webrtc"
+                    RESULT_VARIABLE gclient_sync_webrtc_result
+            )
+            if(NOT ${gclient_sync_webrtc_result} EQUAL 0)
+                message(FATAL_ERROR "\"gclient sync --with_branch_heads --with_tags\" failed (${gclient_sync_webrtc_result})")
+            endif()
         endif()
 
         execute_process(
-                COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/../depot_tools/gclient.bat sync --no-history --with_branch_heads --with_tags
-                WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/webrtc"
-                RESULT_VARIABLE gclient_sync_webrtc_result
+            COMMAND ${CMAKE_COMMAND} -DARCHITECTURE="${CMAKE_BUILD_ARCHITECTURE}" -DSYSROOT="${CMAKE_SYSROOT}" -P ${CMAKE_CURRENT_SOURCE_DIR}/generate_ninja_files.cmake
+            WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/webrtc/src"
+            RESULT_VARIABLE generate_ninja_files_result
         )
-        if(NOT ${gclient_sync_webrtc_result} EQUAL 0)
-            message(FATAL_ERROR "\"gclient sync --no-history --with_branch_heads --with_tags\" failed (${gclient_sync_webrtc_result})")
+        if(NOT ${generate_ninja_files_result} EQUAL 0)
+            message(FATAL_ERROR "\"generate_ninja_files.cmake\" failed (${generate_ninja_files_result})")
         endif()
+
+        add_custom_target(
+                webrtc_native ALL
+                COMMAND ninja -C ${CMAKE_CURRENT_SOURCE_DIR}/webrtc/src/out/${CMAKE_BUILD_TYPE}
+        )
+
 else(WIN32)
     set(ENV{PATH} $ENV{PATH}:${CMAKE_CURRENT_LIST_DIR}/../depot_tools/)
 
@@ -42,21 +77,21 @@ else(WIN32)
 
     if(NOT EXISTS "${CMAKE_CURRENT_LIST_DIR}/webrtc/src")
         execute_process(
-                COMMAND fetch --no-history webrtc
+                COMMAND fetch webrtc
                 WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/webrtc"
                 RESULT_VARIABLE fetch_webrtc_result
         )
         if(NOT ${fetch_webrtc_result} EQUAL 0)
-            message(FATAL_ERROR "\"fetch --no-history webrtc\" failed (${fetch_webrtc_result})")
+            message(FATAL_ERROR "\"fetch webrtc\" failed (${fetch_webrtc_result})")
         endif()
 
         execute_process(
-                COMMAND gclient sync --no-history --with_branch_heads --with_tags
+                COMMAND gclient sync --with_branch_heads --with_tags
                 WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/webrtc"
                 RESULT_VARIABLE gclient_sync_webrtc_result
         )
         if(NOT ${gclient_sync_webrtc_result} EQUAL 0)
-            message(FATAL_ERROR "\"gclient sync --no-history --with_branch_heads --with_tags\" failed (${gclient_sync_webrtc_result})")
+            message(FATAL_ERROR "\"gclient sync --with_branch_heads --with_tags\" failed (${gclient_sync_webrtc_result})")
         endif()
 
         execute_process(
@@ -69,12 +104,12 @@ else(WIN32)
         endif()
 
         execute_process(
-                COMMAND gclient sync --no-history --with_branch_heads --with_tags
+                COMMAND gclient sync --with_branch_heads --with_tags
                 WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/webrtc"
                 RESULT_VARIABLE gclient_sync_webrtc_result
         )
         if(NOT ${gclient_sync_webrtc_result} EQUAL 0)
-            message(FATAL_ERROR "\"gclient sync --no-history --with_branch_heads --with_tags\" failed (${gclient_sync_webrtc_result})")
+            message(FATAL_ERROR "\"gclient sync --with_branch_heads --with_tags\" failed (${gclient_sync_webrtc_result})")
         endif()
     endif()
 
@@ -106,12 +141,12 @@ else(WIN32)
 
 
     execute_process(
-            COMMAND "${CMAKE_CURRENT_LIST_DIR}/generate_ninja_files.bash" "${CMAKE_BUILD_ARCHITECTURE}" "${CMAKE_SYSROOT}"
+            COMMAND ${CMAKE_COMMAND} -DARCHITECTURE="${CMAKE_BUILD_ARCHITECTURE}" -DSYSROOT="${CMAKE_SYSROOT}" -P ${CMAKE_CURRENT_SOURCE_DIR}/generate_ninja_files.cmake
             WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/webrtc/src"
             RESULT_VARIABLE generate_ninja_files_result
     )
     if(NOT ${generate_ninja_files_result} EQUAL 0)
-        message(FATAL_ERROR "\"generate_ninja_files.bash\" failed (${generate_ninja_files_result})")
+        message(FATAL_ERROR "\"generate_ninja_files.cmake\" failed (${generate_ninja_files_result})")
     endif()
 
     add_custom_target(
