--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,31 +7,29 @@ project(webrtc-native-build)
 if (CMAKE_BUILD_ARCHITECTURE MATCHES arm64)
     set(CMAKE_SYSTEM_NAME Linux)
     set(CMAKE_SYSTEM_PROCESSOR arm64)
-    SET(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM BOTH)
-    SET(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
-    SET(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
+    set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM BOTH)
+    set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
+    set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
     set(CMAKE_SYSROOT ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/webrtc_native/webrtc/src/build/linux/debian_sid_arm64-sysroot)
     set(CMAKE_C_COMPILER /usr/bin/aarch64-linux-gnu-gcc)
     set(CMAKE_CXX_COMPILER /usr/bin/aarch64-linux-gnu-g++)
 elseif (CMAKE_BUILD_ARCHITECTURE MATCHES arm32)
     set(CMAKE_SYSTEM_NAME Linux)
     set(CMAKE_SYSTEM_PROCESSOR armhf)
-    SET(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM BOTH)
-    SET(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
-    SET(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
+    set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM BOTH)
+    set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
+    set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
     set(CMAKE_SYSROOT ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/webrtc_native/webrtc/src/build/linux/debian_sid_arm-sysroot)
     set(CMAKE_C_COMPILER /usr/bin/arm-linux-gnueabihf-gcc)
     set(CMAKE_CXX_COMPILER /usr/bin/arm-linux-gnueabihf-g++)
 elseif (CMAKE_BUILD_ARCHITECTURE MATCHES win64)
-    set(ENV{DEPOT_TOOLS_WIN_TOOLCHAIN} 0)
-    # set(GYP_MSVS_VERSION 2019)
     message(STATUS "Windows build not fully supported yet.")
 else()
     # Will use native compiler
     if (APPLE)
-	set(CMAKE_BUILD_ARCHITECTURE osx64)
+        set(CMAKE_BUILD_ARCHITECTURE osx64)
     else()
-	set(CMAKE_BUILD_ARCHITECTURE amd64)
+        set(CMAKE_BUILD_ARCHITECTURE amd64)
     endif()
 
     # set(CMAKE_SYSROOT ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/webrtc_native/webrtc/src/build/linux/debian_sid_amd64-sysroot)
