--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,35 +1,37 @@
 cmake_minimum_required(VERSION 3.10.0)
 
-project(webrtc-native-build)
+project(webrtc-native-build NONE)
 
 
 # Verify build architecture
 if (CMAKE_BUILD_ARCHITECTURE MATCHES arm64)
     set(CMAKE_SYSTEM_NAME Linux)
     set(CMAKE_SYSTEM_PROCESSOR arm64)
-    SET(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM BOTH)
-    SET(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
-    SET(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
+    set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM BOTH)
+    set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
+    set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
     set(CMAKE_SYSROOT ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/webrtc_native/webrtc/src/build/linux/debian_sid_arm64-sysroot)
     set(CMAKE_C_COMPILER /usr/bin/aarch64-linux-gnu-gcc)
     set(CMAKE_CXX_COMPILER /usr/bin/aarch64-linux-gnu-g++)
-elseif (CMAKE_BUILD_ARCHITECTURE MATCHES arm32)    
+elseif (CMAKE_BUILD_ARCHITECTURE MATCHES arm32)
     set(CMAKE_SYSTEM_NAME Linux)
     set(CMAKE_SYSTEM_PROCESSOR armhf)
-    SET(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM BOTH)
-    SET(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
-    SET(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
+    set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM BOTH)
+    set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
+    set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
     set(CMAKE_SYSROOT ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/webrtc_native/webrtc/src/build/linux/debian_sid_arm-sysroot)
     set(CMAKE_C_COMPILER /usr/bin/arm-linux-gnueabihf-gcc)
     set(CMAKE_CXX_COMPILER /usr/bin/arm-linux-gnueabihf-g++)
 elseif (CMAKE_BUILD_ARCHITECTURE MATCHES win64)
-    message(STATUS "Windows build not fully supported yet.")
+    # Nothing to do
 else()
     # Will use native compiler
     if (APPLE)
-	set(CMAKE_BUILD_ARCHITECTURE osx64)
+        set(CMAKE_BUILD_ARCHITECTURE osx64)
+    elseif(WIN32)
+        set(CMAKE_BUILD_ARCHITECTURE win64)
     else()
-	set(CMAKE_BUILD_ARCHITECTURE amd64)
+        set(CMAKE_BUILD_ARCHITECTURE amd64)
     endif()
 
     # set(CMAKE_SYSROOT ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/webrtc_native/webrtc/src/build/linux/debian_sid_amd64-sysroot)
@@ -101,10 +103,14 @@ endfunction(assign_source_group)
 if (WIN32)
     # set(CMAKE_CXX_FLAGS "-fPIC")
     # add_definitions(-DWEBRTC_POSIX)
-    list(APPEND boringssl_INCLUDE "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/third_party/boringssl/src/include")  
-    list(APPEND webrtc_native_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/out/${CMAKE_BUILD_TYPE}/obj/libwebrtc.lib")
-    list(APPEND boringssl_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/out/${CMAKE_BUILD_TYPE}/obj/third_party/boringssl/libboringssl.lib")
+    list(APPEND boringssl_INCLUDE "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/third_party/boringssl/src/include")
+    list(APPEND webrtc_native_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/out/${CMAKE_BUILD_TYPE}/obj/webrtc.lib")
+    list(APPEND boringssl_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/out/${CMAKE_BUILD_TYPE}/obj/third_party/boringssl/boringssl.lib")
     list(APPEND libyuv_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/out/${CMAKE_BUILD_TYPE}/obj/third_party/libyuv/libyuv_internal.lib")
+
+    set(CPACK_PACKAGE_FILE_NAME ${CMAKE_PROJECT_NAME}-msvc-2019-win64-${CMAKE_BUILD_TYPE}-${WEBRTC_NATIVE_BUILD_VERSION})
+    set(CPACK_GENERATOR "ZIP")
+    include(CPack)
 elseif (UNIX)
     set(CMAKE_CXX_FLAGS "-fPIC")
     add_definitions(-DWEBRTC_POSIX)
@@ -116,5 +122,3 @@ endif (WIN32)
 
 
 add_subdirectory(3rdParty)
-
-
