Fix jetson build.

--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -52,7 +52,7 @@ jobs:
       matrix:
         os: [ubuntu-18.04, ubuntu-20.04]
         architecture: [arm32, arm64, amd64]
-        build-type: [Release, Debug]
+        build-type: [Release]
 
     runs-on: ${{ matrix.os }}
     steps:
