--- a/.github/workflows/test_build_linux.yml
+++ b/.github/workflows/test_build_linux.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-20.04]
-        architecture: [amd64]
+        architecture: [arm64, amd64]
         build-type: [Release, Debug]
 
     runs-on: ${{ matrix.os }}
