--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -51,7 +51,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-20.04]
-        architecture: [amd64]
+        architecture: [amd64, arm64]
         build-type: [Release, Debug]
 
     runs-on: ${{ matrix.os }}
