--- a/3rdParty/webrtc_native/CMakeLists.txt
+++ b/3rdParty/webrtc_native/CMakeLists.txt
@@ -116,7 +116,7 @@ else(WIN32)
 
     if (CMAKE_BUILD_ARCHITECTURE MATCHES arm64)
         execute_process(
-            COMMAND python2 install-sysroot.py --arch=${CMAKE_BUILD_ARCHITECTURE}
+            COMMAND python install-sysroot.py --arch=${CMAKE_BUILD_ARCHITECTURE}
             WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/webrtc/src/build/linux/sysroot_scripts"
             RESULT_VARIABLE build_sysroot_architecture
         )
@@ -129,7 +129,7 @@ else(WIN32)
 
     if (CMAKE_BUILD_ARCHITECTURE MATCHES arm32)
         execute_process(
-                COMMAND python2 install-sysroot.py --arch=arm
+                COMMAND python install-sysroot.py --arch=arm
                 WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/webrtc/src/build/linux/sysroot_scripts"
                 RESULT_VARIABLE build_sysroot_architecture
         )
