--- a/.github/workflows/test_build_linux.yml
+++ b/.github/workflows/test_build_linux.yml
@@ -9,7 +9,7 @@ jobs:
   build-linux:
     strategy:
       matrix:
-        os: [ubuntu-18.04, ubuntu-20.04, ubuntu-22.04]
+        os: [ubuntu-20.04, ubuntu-22.04]
         architecture: [arm64, amd64]
         build-type: [Release, Debug]
 
