--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -49,7 +49,7 @@ jobs:
     needs: create-release
     strategy:
       matrix:
-        os: [ubuntu-20.04]
+        os: [ubuntu-20.04, ubuntu-22.04]
         architecture: [amd64, arm64]
         build-type: [Release, Debug]
 
