--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -131,7 +131,7 @@ jobs:
     needs: create-release
     strategy:
       matrix:
-        os: [macos-10.15, macos-11, macos-12]
+        os: [macos-11, macos-12]
         architecture: [osx64]
         build-type: [Release, Debug]
 
