--- a/3rdParty/webrtc_native/CMakeLists.txt
+++ b/3rdParty/webrtc_native/CMakeLists.txt
@@ -1,5 +1,5 @@
-# VERSION MAJOR = 89, MINOR=0, BUILD=4389, PATCH=130
-set(WEBRTC_CHECKOUT e7d9f74b256605556726c64dacd518a105ba872f)
+# VERSION MAJOR = 105, MINOR=0, BUILD=5195, PATCH=72
+set(WEBRTC_CHECKOUT 42be4ae879ed6870dfc5ca554d11062b536da717)
 
 if(WIN32)
 
@@ -116,7 +116,7 @@ else(WIN32)
 
     if (CMAKE_BUILD_ARCHITECTURE MATCHES arm64)
         execute_process(
-            COMMAND python2 install-sysroot.py --arch=${CMAKE_BUILD_ARCHITECTURE}
+            COMMAND python install-sysroot.py --arch=${CMAKE_BUILD_ARCHITECTURE}
             WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/webrtc/src/build/linux/sysroot_scripts"
             RESULT_VARIABLE build_sysroot_architecture
         )
@@ -129,7 +129,7 @@ else(WIN32)
 
     if (CMAKE_BUILD_ARCHITECTURE MATCHES arm32)
         execute_process(
-                COMMAND python2 install-sysroot.py --arch=arm
+                COMMAND python install-sysroot.py --arch=arm
                 WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/webrtc/src/build/linux/sysroot_scripts"
                 RESULT_VARIABLE build_sysroot_architecture
         )
