--- a/.github/workflows/build_only.yml
+++ b/.github/workflows/build_only.yml
@@ -9,8 +9,8 @@ jobs:
   build-linux:
     strategy:
       matrix:
-        os: [ubuntu-18.04, ubuntu-20.04]
-        architecture: [arm32, arm64, amd64]
+        os: [ubuntu-20.04, ubuntu-22.04]
+        architecture: [arm64, amd64]
         build-type: [Release, Debug]
 
     runs-on: ${{ matrix.os }}
@@ -62,7 +62,7 @@ jobs:
   build-mac:
     strategy:
       matrix:
-        os: [macos-10.15]
+        os: [macos-11, macos-12]
         architecture: [osx64]
         build-type: [Release, Debug]
 
