--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -49,7 +49,7 @@ jobs:
     needs: create-release
     strategy:
       matrix:
-        os: [ubuntu-20.04, ubuntu-22.04]
+        os: [ubuntu-18.04, ubuntu-20.04, ubuntu-22.04]
         architecture: [amd64, arm64]
         build-type: [Release, Debug]
 
@@ -96,8 +96,33 @@ jobs:
           sudo apt-get update
           sudo apt-get install ninja-build cmake build-essential libssl-dev libboost-all-dev
           sudo apt-get install libglib2.0-dev libgtk-3-dev libpulse-dev libasound2-dev
+
+      - name: Install cross compilation dependencies
+        run: |
           sudo apt-get install g++-aarch64-linux-gnu gcc-aarch64-linux-gnu
           sudo apt-get install gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf
+        if: matrix.architecture == 'arm64' && matrix.os != 'ubuntu-18.04'
+
+      - name: Install cross compilation dependencies (Ubuntu 18.04)
+        run: |
+          sudo apt-get install g++-8-aarch64-linux-gnu gcc-8-aarch64-linux-gnu
+          sudo apt-get install gcc-8-arm-linux-gnueabihf g++-8-arm-linux-gnueabihf
+        if: matrix.architecture == 'arm64' && matrix.os == 'ubuntu-18.04'
+
+      - name: Use gcc-8 and g++-8 on ubuntu-18.04
+        run: |
+          sudo apt-get install gcc-8 g++-8
+          sudo update-alternatives --remove-all gcc
+          sudo update-alternatives --remove-all g++
+          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 100
+          sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-8 100
+          sudo update-alternatives --install /usr/bin/cc cc /usr/bin/gcc 100
+          sudo update-alternatives --install /usr/bin/c++ c++ /usr/bin/g++ 100
+          sudo update-alternatives --set gcc /usr/bin/gcc-8
+          sudo update-alternatives --set g++ /usr/bin/g++-8
+          sudo update-alternatives --set cc /usr/bin/gcc
+          sudo update-alternatives --set c++ /usr/bin/g++
+        if: matrix.os == 'ubuntu-18.04'
 
       - name: Create build directory
         working-directory: .
