--- a/.github/workflows/test_build_linux.yml
+++ b/.github/workflows/test_build_linux.yml
@@ -4,10 +4,17 @@ name: test_build_linux
 on:
   workflow_dispatch:
     branches: [main]
+    inputs:
+      fail_fast:
+        description: "Should stop the workflow as soon as one configuration fails"
+        required: false
+        type: boolean
+        default: true
 
 jobs:
   build-linux:
     strategy:
+      fail-fast: ${{ github.event.inputs.fail_fast }}
       matrix:
         os: [ubuntu-18.04, ubuntu-20.04, ubuntu-22.04]
         architecture: [arm64, amd64]
