Add Ubuntu 18.04 back to CI (#7)
* Update depot_tools

* Use gcc8 on ubuntu-18.04

* Fix update-alternatives

* Fix gcc/g++ cross-compilers

* Update readme to include way to build on ubuntu 18.04

* Add fail-fast option to CI

* Update fail_fast parameter for CI

* Removed useless dependency from readme

--- a/.github/workflows/build_only.yml
+++ b/.github/workflows/build_only.yml
@@ -9,7 +9,7 @@ jobs:
   build-linux:
     strategy:
       matrix:
-        os: [ubuntu-20.04, ubuntu-22.04]
+        os: [ubuntu-18.04, ubuntu-20.04, ubuntu-22.04]
         architecture: [arm64, amd64]
         build-type: [Release, Debug]
 
@@ -45,8 +45,40 @@ jobs:
           sudo apt-get update
           sudo apt-get install ninja-build cmake build-essential libssl-dev libboost-all-dev
           sudo apt-get install libglib2.0-dev libgtk-3-dev libpulse-dev libasound2-dev
+
+      - name: Install cross compilation dependencies
+        run: |
           sudo apt-get install g++-aarch64-linux-gnu gcc-aarch64-linux-gnu
           sudo apt-get install gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf
+        if: matrix.architecture == 'arm64' && matrix.os != 'ubuntu-18.04'
+
+      - name: Install cross compilation dependencies (Ubuntu 18.04)
+        run: |
+          sudo apt-get install g++-8-aarch64-linux-gnu gcc-8-aarch64-linux-gnu
+          sudo apt-get install gcc-8-arm-linux-gnueabihf g++-8-arm-linux-gnueabihf
+        if: matrix.architecture == 'arm64' && matrix.os == 'ubuntu-18.04'
+
+      - name: Use gcc-8 and g++-8 on ubuntu-18.04
+        run: |
+          sudo apt-get install gcc-8 g++-8
+          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 100
+          sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-8 100
+          sudo update-alternatives --set gcc /usr/bin/gcc-8
+          sudo update-alternatives --set g++ /usr/bin/g++-8
+        if: matrix.os == 'ubuntu-18.04' && matrix.architecture != 'arm64'
+
+      - name: Use gcc-8 and g++-8 cross-compilers on ubuntu-18.04
+        run: |
+          sudo update-alternatives --install /usr/bin/aarch64-linux-gnu-gcc aarch64-linux-gnu-gcc /usr/bin/aarch64-linux-gnu-gcc-8 100
+          sudo update-alternatives --install /usr/bin/aarch64-linux-gnu-g++ aarch64-linux-gnu-g++ /usr/bin/aarch64-linux-gnu-g++-8 100
+          sudo update-alternatives --set aarch64-linux-gnu-gcc /usr/bin/aarch64-linux-gnu-gcc-8
+          sudo update-alternatives --set aarch64-linux-gnu-g++ /usr/bin/aarch64-linux-gnu-g++-8
+          sudo update-alternatives --install /usr/bin/arm-linux-gnueabihf-gcc arm-linux-gnueabihf-gcc /usr/bin/arm-linux-gnueabihf-gcc-8 100
+          sudo update-alternatives --install /usr/bin/arm-linux-gnueabihf-g++ arm-linux-gnueabihf-g++ /usr/bin/arm-linux-gnueabihf-g++-8 100
+          sudo update-alternatives --set arm-linux-gnueabihf-gcc /usr/bin/arm-linux-gnueabihf-gcc-8
+          sudo update-alternatives --set arm-linux-gnueabihf-g++ /usr/bin/arm-linux-gnueabihf-g++-8
+        if: matrix.os == 'ubuntu-18.04' && matrix.architecture == 'arm64'
+
       - name: Create build directory
         working-directory: .
         run: |
