--- a/.github/workflows/test_build_mac.yml
+++ b/.github/workflows/test_build_mac.yml
@@ -4,10 +4,17 @@ name: test_build_mac
 on:
   workflow_dispatch:
     branches: [main]
+    inputs:
+      fail_fast:
+        description: "Should stop the workflow as soon as one configuration fails"
+        required: false
+        type: boolean
+        default: true
 
 jobs:
   build-mac:
     strategy:
+      fail-fast: ${{ github.event.inputs.fail_fast != 'false'}}
       matrix:
         os: [macos-11, macos-12]
         architecture: [osx64]
