--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -63,6 +63,9 @@ jobs:
           root-reserve-mb: 1024
           swap-size-mb: 1024
           remove-dotnet: 'true'
+          remove-android: 'true'
+          remove-haskell: 'true'
+          remove-codeql: 'true'
     
       - uses: actions/checkout@v4
         with:
