--- a/docker/ubuntu-20.04/Dockerfile
+++ b/docker/ubuntu-20.04/Dockerfile
@@ -10,11 +10,16 @@ RUN apt update && DEBIAN_FRONTEND=noninteractive apt install -y \
 # Install cross-compiler
 RUN apt install -y g++-aarch64-linux-gnu gcc-aarch64-linux-gnu gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf
 
+# Define a build-time argument
+ARG BUILD_TYPE=Release
+ARG BUILD_ARCHITECTURE=amd64
+ARG BUILD_BRANCH=main
+
 # Set Working directory
 WORKDIR /root
 
 # Checkout code
-RUN git clone -b update-webrtc  https://github.com/introlab/webrtc-native-build.git --recurse-submodules
+RUN git clone -b ${BUILD_BRANCH}  https://github.com/introlab/webrtc-native-build.git --recurse-submodules
 
 WORKDIR /root/webrtc-native-build
 
@@ -22,7 +27,7 @@ RUN mkdir build
 
 WORKDIR /root/webrtc-native-build/build
 
-RUN cmake ../ -DCMAKE_BUILD_TYPE=Release -DCMAKE_BUILD_ARCHITECTURE=amd64
+RUN cmake ../ -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DCMAKE_BUILD_ARCHITECTURE=${BUILD_ARCHITECTURE}
 RUN make -j4
 RUN make install
 
