--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,8 @@ if (CMAKE_BUILD_ARCHITECTURE MATCHES arm64)
     set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
     set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
     set(CMAKE_SYSROOT ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/webrtc_native/webrtc/src/build/linux/debian_bullseye_arm64-sysroot)
-    set(CMAKE_C_COMPILER /usr/bin/aarch64-linux-gnu-gcc)
-    set(CMAKE_CXX_COMPILER /usr/bin/aarch64-linux-gnu-g++)
+    # set(CMAKE_C_COMPILER /usr/bin/aarch64-linux-gnu-gcc)
+    # set(CMAKE_CXX_COMPILER /usr/bin/aarch64-linux-gnu-g++)
 elseif (CMAKE_BUILD_ARCHITECTURE MATCHES arm32)
     set(CMAKE_SYSTEM_NAME Linux)
     set(CMAKE_SYSTEM_PROCESSOR armhf)
@@ -20,8 +20,8 @@ elseif (CMAKE_BUILD_ARCHITECTURE MATCHES arm32)
     set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
     set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
     set(CMAKE_SYSROOT ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/webrtc_native/webrtc/src/build/linux/debian_bullseye_arm-sysroot)
-    set(CMAKE_C_COMPILER /usr/bin/arm-linux-gnueabihf-gcc)
-    set(CMAKE_CXX_COMPILER /usr/bin/arm-linux-gnueabihf-g++)
+    # set(CMAKE_C_COMPILER /usr/bin/arm-linux-gnueabihf-gcc)
+    # set(CMAKE_CXX_COMPILER /usr/bin/arm-linux-gnueabihf-g++)
 elseif (CMAKE_BUILD_ARCHITECTURE MATCHES win64)
     # Nothing to do
 else()
