Fix get release url artifact

--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -77,6 +77,10 @@ jobs:
         with:
           submodules: recursive
 
+      - uses: actions/download-artifact@v4
+        with:
+          name: release_url
+
       - name: Get Upload URL
         id: get_release_info
         run: |
@@ -116,7 +120,6 @@ jobs:
           docker buildx build -t webrtc --build-arg BUILD_TYPE=${{ matrix.build-type }} --build-arg BUILD_ARCHITECTURE=${{ matrix.architecture }} --build-arg BUILD_BRANCH=${{ steps.generate_branch_name.outputs.branch_name }} .
           docker run --rm --volume $PWD:/data webrtc tar cvzf /data/${{ steps.generate_release_file_name.outputs.release_file_name }}.tar.gz ./webrtc-native-build-${{ steps.generate_version_output.outputs.version }}
           ls -l
-
         shell: bash
 
       - name: Upload Release Asset
